--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Tutorial</title>
   <script>
-    alert("hello, world!")
+    alert("hello, world!");
   </script>
 </head>
 <body>
