Completed string and arrays

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>JavaScript Tutorial</title>
   <script>
     alert("hello, world!");
+    console.log("this page contains a friendly greeting");
   </script>
 </head>
 <body>
