--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>JavaScript Tutorial</title>
   <script>
     alert("hello, world!");
+    const days = ["Sunday", "Monday", "Tuesday", "Wednesday",
+                             "Thursday", "Friday", "Saturday"];
     console.log("this page contains a friendly greeting");
+    let now = new Date();
+    let day = days[now.getDay()];
+    console.log(day);
   </script>
 </head>
 <body>
