--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Tutorial</title>
   <script>
-    alert("hello, world!");
-    const days = ["Sunday", "Monday", "Tuesday", "Wednesday",
+    // alert("hello, world!");
+    const dayName = (date)=> {
+      const days = ["Sunday", "Monday", "Tuesday", "Wednesday",
                              "Thursday", "Friday", "Saturday"];
-    console.log("this page contains a friendly greeting");
+      return days[date.getDay()];
+    }
     let now = new Date();
-    let day = days[now.getDay()];
-    console.log(day);
+    alert(`Hello world!, Happy ${dayName(now)}.`);
+    
+    console.log("this page contains a friendly greeting");
   </script>
 </head>
 <body>
