--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Tutorial</title>
+  <script src="dayName.js"></script>
   <script>
-    // alert("hello, world!");
-    const dayName = (date)=> {
-      const days = ["Sunday", "Monday", "Tuesday", "Wednesday",
-                             "Thursday", "Friday", "Saturday"];
-      return days[date.getDay()];
-    }
     let now = new Date();
-    alert(`Hello world!, Happy ${dayName(now)}.`);
-    
+    alert(greetings(now));
     console.log("this page contains a friendly greeting");
   </script>
 </head>
