add function and buttons into page and use event listners

--- a/palindrome.html
+++ b/palindrome.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <h1>Palindrome Tester</h1>
+  <form id="palindrome-tester">
+    <button type="submit">Is it a palindrome?</button>
+  </form>
 </body>
 </html>
