--- a/palindrome.html
+++ b/palindrome.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="bundle.js"></script>
-  <title>Palindrome Tester</title>
-</head>
-<body>
-  <h1>Palindrome Tester</h1>
-  <form id="palindrome-tester">
-    <button type="submit">Is it a palindrome?</button>
-  </form>
-</body>
+<html>
+  <head>
+    <title>Palindrome Tester</title>
+    <meta charset="utf-8">
+    <script src="bundle.js"></script>
+  </head>
+  <body>
+    <h1>Palindrome Tester</h1>
+
+    <button id="palindromeTester">Test palindrome</button>
+
+    <h2>Result</h2>
+
+    <p id="palindromeResult"></p>
+
+  </body>
 </html>
