add text box and use form submit

--- a/palindrome.html
+++ b/palindrome.html
@@ -7,8 +7,12 @@
   </head>
   <body>
     <h1>Palindrome Tester</h1>
-
-    <button id="palindromeTester">Test palindrome</button>
+    
+    <form id="palindromeTester">
+      <textarea name="phrase" cols="30" rows="10"></textarea>
+      <br>
+      <button id="palindromeTester">Test palindrome</button>
+    </form>
 
     <h2>Result</h2>
 
